[project]
name = "dowhistle-mcp-server"
version = "0.1.0"
description = "MCP Server with Agent Capabilities"
readme = "README.md"

# ✅ Render supports Python up to 3.12 only
requires-python = ">=3.10,<3.13"

keywords = ["mcp", "server", "agents", "api", "fastmcp", "dowhistle"]

authors = [
    { name = "Nishanth M", email = "developernishanth2000@gmail.com" }
]

dependencies = [
    "fastmcp>=2.11.3",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
    "structlog>=25.4.0",
    "openai>=1.58.1",
    "workos>=5.35.0",
    "starlette>=0.37.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "inline-snapshot>=0.11",
    "dirty-equals>=0.7"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
